# QMC5883L_picoFreeRTOS

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/qmc_sensor/: CMakeLists.txt  qmc5883l.cpp  qmc5883l.h
